--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -361,10 +361,11 @@
                                 
                                 <div class="oe_kanban_content">
                                     <div>
-                                        <strong class="o_kanban_record_title"><field name="order_id"/>: <field name="name"/></strong>
+                                        <strong class="o_kanban_record_title"><field name="descripcion"/></strong>
                                     </div>
                                     
                                     <div class="text-muted o_kanban_record_subtitle">
+					<field name="op_cantonera_maquina"/><br/>
                                         Peso neto: <field name="peso_neto"/><br/>
                                         Horas: <field name="horas"/>
                                     </div>
@@ -404,10 +405,11 @@
                                 
                                 <div class="oe_kanban_content">
                                     <div>
-                                        <strong class="o_kanban_record_title"><field name="order_id"/>: <field name="name"/></strong>
+                                        <strong class="o_kanban_record_title"><field name="descripcion"/></strong>
                                     </div>
                                     
                                     <div class="text-muted o_kanban_record_subtitle">
+					<field name="op_cantonera_maquina"/><br/>
                                         Peso neto: <field name="peso_neto"/><br/>
                                         Horas: <field name="horas"/>
                                     </div>
