--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -98,7 +98,7 @@
 		    <field name="num_pallets" attrs="{'readonly': [('no_editar', '=', True)]}"/>
 		    <field name="bultos" />
 		    <field name="fila_vinculada_id" domain="[('order_id', '=', order_id)]"/>
-		    <field name="estado" />	
+		    <field name="estado_linea" />	
 		    <field name="und_user" invisible="1" />
 		    <field name="und_pallet" />
 		    <field name="cantidad" />
@@ -259,6 +259,7 @@
 				<field name="no_editar" invisible="1" />
 				<field name="attribute_id" domain="[('partner_id', '=', order_partner_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
 				<field name="oferta_id" domain="[('attribute_id', '=', attribute_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
+				<field name="estado_linea" />
 		</group>
 		<group>		
 			<field name="lot_ids" widget="many2many" domain="[('disponible','=',True), ('product_id','=',product_id)]">
