--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -347,9 +347,10 @@
             <field name="name">sale.order.line.cantoneras.kanban</field>
             <field name="model">sale.order.line</field>
             <field name="arch" type="xml">
-                <kanban default_group_by="estado_cantonera" class="o_kanban_small_column o_kanban_project_tasks">
+                <kanban default_group_by="estado_cantonera" class="o_kanban_small_column o_kanban_project_tasks" default_order="sequence_cantonera">
                 
                     <field name="descripcion"/>
+                    <field name="color"/>
 		    <field name="op_cantonera_maquina"/>
                     <field name="peso_neto"/>
                     <field name="estado_cantonera" options="{&quot;group_by_tooltip&quot;: {&quot;requirements&quot;: &quot;Description&quot;, &quot;legend_priority&quot;: &quot;Use of stars&quot;}}"/>
@@ -358,8 +359,17 @@
                     <progressbar field="kanban_state" colors='{"done": "success", "blocked": "danger"}' sum_field="horas"/>
                     <templates>
                         <t t-name="kanban-box">
-                            <div>
-                                
+                            <div t-attf-class="#{kanban_color(record.color.raw_value)} oe_kanban_global_click">
+                                <div class="o_dropdown_kanban dropdown">
+
+                                    <a class="dropdown-toggle o-no-caret btn" role="button" data-toggle="dropdown" href="#" aria-label="Dropdown menu" title="Dropdown menu">
+                                        <span class="fa fa-ellipsis-v"/>
+                                    </a>
+                                    <div class="dropdown-menu" role="menu">
+                                        <t t-if="widget.editable"><a role="menuitem" type="edit" class="dropdown-item">Edit</a></t>
+                                        <ul class="oe_kanban_colorpicker" data-field="color"/>
+                                    </div>
+                                </div>
                                 <div class="oe_kanban_content">
                                     <div>
                                         <strong class="o_kanban_record_title"><field name="descripcion"/></strong>
@@ -370,6 +380,7 @@
                                         <field name="cliente_nombre"/><br/>
 					Fecha Entrega: <field name="fecha_entrega"/><br/>
                                         Duración: <field name="op_duracion"/><br/>
+                                        Secuencia: <field name="sequence_cantonera"/><br/>
 					<button string="Ir" 
 						name="action_view_form_sale_order" 
 						type="object" 
@@ -398,9 +409,10 @@
             <field name="name">sale.order.line.slipsheet.kanban</field>
             <field name="model">sale.order.line</field>
             <field name="arch" type="xml">
-                <kanban default_group_by="estado_slipsheet" class="o_kanban_small_column o_kanban_project_tasks">
+                <kanban default_group_by="estado_slipsheet" class="o_kanban_small_column o_kanban_project_tasks" default_order="sequence_cantonera">
                 
                     <field name="descripcion"/>
+                    <field name="color"/>
                     <field name="peso_neto"/>
                     <field name="estado_slipsheet" options="{&quot;group_by_tooltip&quot;: {&quot;requirements&quot;: &quot;Description&quot;, &quot;legend_priority&quot;: &quot;Use of stars&quot;}}"/>
                     <field name="horas"/>
@@ -408,7 +420,17 @@
                     <progressbar field="kanban_state" colors='{"done": "success", "blocked": "danger"}' sum_field="horas"/>
                     <templates>
                         <t t-name="kanban-box">
-                            <div>
+                            <div t-attf-class="#{kanban_color(record.color.raw_value)} oe_kanban_global_click">
+                                <div class="o_dropdown_kanban dropdown">
+
+                                    <a class="dropdown-toggle o-no-caret btn" role="button" data-toggle="dropdown" href="#" aria-label="Dropdown menu" title="Dropdown menu">
+                                        <span class="fa fa-ellipsis-v"/>
+                                    </a>
+                                    <div class="dropdown-menu" role="menu">
+                                        <t t-if="widget.editable"><a role="menuitem" type="edit" class="dropdown-item">Edit</a></t>
+                                        <ul class="oe_kanban_colorpicker" data-field="color"/>
+                                    </div>
+                                </div>
                                 
                                 <div class="oe_kanban_content">
                                     <div>
@@ -420,6 +442,81 @@
                                         <field name="cliente_nombre"/><br/>
 					Fecha Entrega: <field name="fecha_entrega"/><br/>
                                         Duración: <field name="op_duracion"/><br/>
+                                        Secuencia: <field name="sequence_cantonera"/><br/>
+					<button string="Ir" 
+						name="action_view_form_sale_order" 
+						type="object" 
+						class="oe_highlight">IR</button>
+					<field name="horas" invisible="1"/>
+                                    </div>
+                                </div>
+                                <div class="oe_clear"/>
+                            </div>
+                        </t>
+                    </templates>
+                </kanban>
+            </field>
+         </record>
+         
+         
+         
+    <record model="ir.actions.act_window" id="action_sale_order_line_produccion_sierra">
+        <field name="name">Sierra</field>
+        <field name="res_model">sale.order.line</field>
+        <field name="view_type">form</field>
+        <field name="view_mode">kanban,tree,form</field>
+        <field name="domain">[('op_sierra', '=', True), ('incompleta', '=', True)]</field>
+    </record>
+    
+    
+    <record model="ir.ui.view" id="view_sale_order_line_sierra_kanban">
+            <field name="name">sale.order.line.sierra.kanban</field>
+            <field name="model">sale.order.line</field>
+            <field name="arch" type="xml">
+                <kanban default_group_by="estado_sierra" class="o_kanban_small_column o_kanban_project_tasks" default_order="sequence_cantonera">
+                
+                    <field name="descripcion"/>
+                    <field name="color"/>
+		    <field name="op_cantonera_maquina"/>
+                    <field name="peso_neto"/>
+                    <field name="estado_sierra" options="{&quot;group_by_tooltip&quot;: {&quot;requirements&quot;: &quot;Description&quot;, &quot;legend_priority&quot;: &quot;Use of stars&quot;}}"/>
+           	    <field name="horas"/>
+                     
+                    <progressbar field="kanban_state" colors='{"done": "success", "blocked": "danger"}' sum_field="horas"/>
+                    <templates>
+                        <t t-name="kanban-box">
+                            <div t-attf-class="#{kanban_color(record.color.raw_value)} oe_kanban_global_click">
+                                <div class="o_dropdown_kanban dropdown">
+
+                                    <a class="dropdown-toggle o-no-caret btn" role="button" data-toggle="dropdown" href="#" aria-label="Dropdown menu" title="Dropdown menu">
+                                        <span class="fa fa-ellipsis-v"/>
+                                    </a>
+                                    <div class="dropdown-menu" role="menu">
+                                        <t t-if="widget.editable"><a role="menuitem" type="edit" class="dropdown-item">Edit</a></t>
+                                        <ul class="oe_kanban_colorpicker" data-field="color"/>
+                                    </div>
+                                </div>
+                                <div class="o_dropdown_kanban dropdown">
+
+                                    <a class="dropdown-toggle o-no-caret btn" role="button" data-toggle="dropdown" href="#" aria-label="Dropdown menu" title="Dropdown menu">
+                                        <span class="fa fa-ellipsis-v"/>
+                                    </a>
+                                    <div class="dropdown-menu" role="menu">
+                                        <t t-if="widget.editable"><a role="menuitem" type="edit" class="dropdown-item">Edit</a></t>
+                                        <ul class="oe_kanban_colorpicker" data-field="color"/>
+                                    </div>
+                                </div>
+                                <div class="oe_kanban_content">
+                                    <div>
+                                        <strong class="o_kanban_record_title"><field name="descripcion"/></strong>
+                                    </div>
+                                    
+                                    <div class="text-muted o_kanban_record_subtitle">
+					<field name="op_cantonera_maquina"/><br/>
+                                        <field name="cliente_nombre"/><br/>
+					Fecha Entrega: <field name="fecha_entrega"/><br/>
+                                        Duración: <field name="op_duracion"/><br/>
+                                        Secuencia: <field name="sequence_cantonera"/><br/>
 					<button string="Ir" 
 						name="action_view_form_sale_order" 
 						type="object" 
@@ -439,6 +536,7 @@
 	<menuitem name="Producción" parent="sale.sale_menu_root" id="menu_sale_order_line_produccion" sequence="4"/>
     <menuitem name="Cantoneras" parent="menu_sale_order_line_produccion" id="menu_sale_order_line_produccion_cantonera" action="action_sale_order_line_produccion_cantonera" sequence="1"/>
     <menuitem name="Slip sheets" parent="menu_sale_order_line_produccion" id="menu_sale_order_line_produccion_slipsheet" action="action_sale_order_line_produccion_slipsheet" sequence="2"/>
+    <menuitem name="Sierra" parent="menu_sale_order_line_produccion" id="menu_sale_order_line_produccion_sierra" action="action_sale_order_line_produccion_sierra" sequence="3"/>
 	
     
     
