--- a/punt_eltete/views/account_invoice.xml
+++ b/punt_eltete/views/account_invoice.xml
@@ -44,10 +44,31 @@
 		</field>	
 		
 		<field name="state" position="before">
-			<field name="peso_neto" sum="Peso Neto"/>
-			<field name="peso_cantonera" sum="Peso Cantonera"/>
-			<field name="peso_slipsheet" sum="Peso SlipSheet"/>
 			<field name="actualizar"/>
+		</field>
+		
+		<field name="state" position="after">
+			<field name="dir_data"/>
+			<field name="id"/>
+			<field name="date_invoice"/>
+			<field name="amount_untaxed"/>
+			<field name="peso_cantonera" sum="Peso"/>
+			<field name="eton_cantonera"/>
+			<field name="peso_perfilu" sum="Peso"/>
+			<field name="eton_perfilu"/>
+			<field name="peso_slipsheet" sum="Peso"/>
+			<field name="eton_slipsheets"/>
+			<field name="peso_formato" sum="Peso"/>
+			<field name="eton_formato"/>
+			<field name="peso_bobina" sum="Peso"/>
+			<field name="eton_bobina"/>
+			<field name="peso_solidboard" sum="Peso"/>
+			<field name="eton_solidboard"/>
+			<field name="peso_pie" sum="Peso"/>
+			<field name="eton_pie"/>
+			<field name="peso_flatboard" sum="Peso"/>
+			<field name="eton_flatboard"/>
+			<field name="importe_varios"/>
 		</field>
 		
 		<field name="user_id" position="attributes">
