--- a/punt_eltete/views/account_invoice.xml
+++ b/punt_eltete/views/account_invoice.xml
@@ -52,23 +52,23 @@
 			<field name="partner_id"/>
 			<field name="date_invoice"/>
 			<field name="number"/>
-			<field name="peso_cantonera" sum="Peso"/>
-			<field name="eton_cantonera"/>
-			<field name="peso_perfilu" sum="Peso"/>
-			<field name="eton_perfilu"/>
-			<field name="peso_slipsheet" sum="Peso"/>
-			<field name="eton_slipsheet"/>
-			<field name="peso_formato" sum="Peso"/>
-			<field name="eton_formato"/>
-			<field name="peso_bobina" sum="Peso"/>
-			<field name="eton_bobina"/>
-			<field name="peso_solidboard" sum="Peso"/>
-			<field name="eton_solidboard"/>
-			<field name="peso_pie" sum="Peso"/>
-			<field name="eton_pie"/>
-			<field name="peso_flatboard" sum="Peso"/>
-			<field name="eton_flatboard"/>
-			<field name="importe_varios" sum="Peso"/>
+			<field name="peso_cantonera" sum="Peso Cantonera"/>
+			<field name="eton_cantonera" sum="Eton Cantonera"/>
+			<field name="peso_perfilu" sum="Peso Perfil U"/>
+			<field name="eton_perfilu" sum="Eton Perfil U"/>
+			<field name="peso_slipsheet" sum="Peso Slip sheet"/>
+			<field name="eton_slipsheet" sum="Eton Slip sheet"/>
+			<field name="peso_formato" sum="Peso Formato"/>
+			<field name="eton_formato" sum="Eton Formato"/>
+			<field name="peso_bobina" sum="Peso Bobina"/>
+			<field name="eton_bobina" sum="Eton Bobina"/>
+			<field name="peso_solidboard" sum="Peso Solid Board"/>
+			<field name="eton_solidboard"  sum="Eton Solid Board"/>
+			<field name="peso_pie" sum="Peso Pie Pallet"/>
+			<field name="eton_pie" sum="Eton Formato"/>
+			<field name="peso_flatboard" sum="Peso Flat Board"/>
+			<field name="eton_flatboard" sum="Eton Flat Board"/>
+			<field name="importe_varios" sum="Importe Varios"/>
 		</field>
 		
 		<field name="user_id" position="attributes">
