--- a/punt_eltete/views/account_invoice.xml
+++ b/punt_eltete/views/account_invoice.xml
@@ -101,6 +101,7 @@
 		<field name="peso_flatboard" sum="Peso Flat Board"/>
 		<field name="eton_flatboard"/>
 		<field name="importe_varios" sum="Importe Varios"/>
+		<field name="state"/>
             </tree>
             
         </field>
