--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -706,13 +706,17 @@
             <field name="arch" type="xml">
                 <form string="Color">
                     <sheet>
-                        <group>
+			<group>
 				<group>
                             		<field name='name' />
-					<field name='fecha' />
-					<field name='comenzar' />
-					<field name='total_terminado' />
+					<field name='tipo' />
 				</group>
+				<group>
+                            		<field name='fecha_inicio' />
+					<field name='fecha_fin' />
+				</group>
+			</group>
+                        <group>
 				<group>
                             		<field name='peso_cantonera' />
 					<field name='peso_perfilu' />
@@ -722,6 +726,20 @@
 					<field name='peso_solidboard' />
 					<field name='peso_pie' />
 					<field name='peso_flatboard' />
+					<br/>
+					<field name='peso_bueno' />
+				</group>
+				<group>
+                            		<field name='peso_cantonera_defectuoso' />
+					<field name='peso_perfilu_defectuoso' />
+					<field name='peso_slipsheet_defectuoso' />
+					<field name='peso_formato_defectuoso' />
+					<field name='peso_bobina_defectuoso' />
+					<field name='peso_solidboard_defectuoso' />
+					<field name='peso_pie_defectuoso' />
+					<field name='peso_flatboard_defectuoso' />
+					<br/>
+					<field name='peso_defectuoso' />
 				</group>
 			</group>
 						
@@ -730,7 +748,7 @@
 			</group>
 							
 			<group>			
-				<field name="terminado_ids"  >
+				<field name="lotes_inventario_ids"  >
                                 	<tree string="Lotes" >
 						<field name="name"/>
                                     		<field name="referencia_id"/>
@@ -744,7 +762,23 @@
 						<field name="almacenado"/>
                                 	</tree>
                             	</field>   
-                        </group>                        
+                        </group>  
+			<group>			
+				<field name="lotes_fecha_ids"  >
+                                	<tree string="Lotes" >
+						<field name="name"/>
+                                    		<field name="referencia_id"/>
+						<field name="unidades"/>
+						<field name="peso_neto"  sum="Peso Neto"/>
+						<field name="fecha_entrada"/>
+						<field name="fecha_salir"/>
+						<field name="comentario"/>
+						<field name="defectuoso"/>
+						<field name="inventariado"/>
+						<field name="almacenado"/>
+                                	</tree>
+                            	</field>   
+                        </group>  
                     </sheet>
                 </form>
             </field>
