--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -712,8 +712,8 @@
 					<field name='tipo' />
 				</group>
 				<group>
-                            		<field name='fecha_inicio' />
-					<field name='fecha_fin' />
+                            		<field name='fecha_inicio' attrs="{'invisible': [('tipo', '!=', '100')]}"/>
+					<field name='fecha_fin' attrs="{'invisible': [('tipo', '=', '10')]}"/>
 				</group>
 			</group>
                         <group>
@@ -748,7 +748,7 @@
 			</group>
 							
 			<group>			
-				<field name="lotes_inventario_ids"  >
+				<field name="lotes_inventario_ids"  attrs="{'invisible': [('tipo', '!=', '10')]}">
                                 	<tree string="Lotes" >
 						<field name="name"/>
                                     		<field name="referencia_id"/>
@@ -764,7 +764,7 @@
                             	</field>   
                         </group>  
 			<group>			
-				<field name="lotes_fecha_ids"  >
+				<field name="lotes_fecha_ids"  attrs="{'invisible': [('tipo', '=', '10')]}"/>>
                                 	<tree string="Lotes" >
 						<field name="name"/>
                                     		<field name="referencia_id"/>
