--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -748,7 +748,7 @@
 			</group>
 							
 			<group>			
-				<field name="lotes_inventario_ids"  attrs="{'invisible': [('tipo', '!=', '10')]}">
+				<field name="lotes_inventario_ids" >
                                 	<tree string="Lotes" >
 						<field name="name"/>
                                     		<field name="referencia_id"/>
@@ -764,7 +764,7 @@
                             	</field>   
                         </group>  
 			<group>			
-				<field name="lotes_fecha_ids"  attrs="{'invisible': [('tipo', '=', '10')]}"/>>
+				<field name="lotes_fecha_ids"  attrs="{'invisible': [('tipo', '=', '10')]}" />
                                 	<tree string="Lotes" >
 						<field name="name"/>
                                     		<field name="referencia_id"/>
