--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -748,7 +748,7 @@
 			</group>
 							
 			<group>			
-				<field name="lotes_inventario_ids" attrs="{'invisible': [('tipo', '!=', '100')]}" >
+				<field name="lotes_inventario_ids" attrs="{'invisible': [('tipo', '=', '100')]}" >
                                 	<tree string="Lotes" >
 						<field name="name"/>
                                     		<field name="referencia_id"/>
